# global-air-quality-dashboard

./: README.md  api_test.py  main.py  pyproject.toml
src/: app.py
src/api/: __init__.py  client.py
src/plots/: __init__.py  charts.py  maps.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  config.py
tests/: test_client.py
